# GameTemplate

./: .gitignore  CMakeLists.txt  README.md
data/Levels/: demo.tmx  space.tmx
data/Levels/images/tilemap/: tileset02.tsx  tilesetSpace.tsx
include/Core/: AssetManager.h  BulletManager.h  CollisionManager.h  EnemyManager.h  Game.h  PowerUpManager.h  SoundManager.h  World.h
include/Gameplay/: Bullet.h  Enemy.h  GameObject.h  Player.h  PowerUp.h  SimpleEnemy.h
include/Render/: SFMLOrthogonalLayer.h
include/UI/: UIManager.h  UIScreenMainMenu.h
include/Utils/: Constants.h  ObjectPool.h
scripts/: generate.bat
src/: main.cpp
src/Core/: AssetManager.cpp  BulletManager.cpp  CollisionManager.cpp  EnemyManager.cpp  Game.cpp  PowerUpManager.cpp  SoundManager.cpp  World.cpp
src/Gameplay/: Bullet.cpp  Enemy.cpp  Player.cpp  PowerUp.cpp  SimpleEnemy.cpp
src/UI/: UIManager.cpp
